--- a/src/css/admin_main.less
+++ b/src/css/admin_main.less
@@ -64,7 +64,12 @@
                             &:hover {
                                 background-color: @white;
                                 color: @header_content-bg;
-                        }
+                            }
+
+                            &:active {
+                                background-color: @white;
+                                color: @header_content-bg;
+                            }
                     }    
                 }
             }
