--- a/src/css/admin_main.less
+++ b/src/css/admin_main.less
@@ -52,9 +52,11 @@
                     list-style: none;
                     padding: 0px;
                     margin: 0px;
+
                         a {
                             display: block;
                             min-height: 46px;
+                            border-radius: 6px;
                             font-size: @font_l;
                             color: @white;
                             margin: 12px 0 0 0;
