--- a/src/css/admin_main.less
+++ b/src/css/admin_main.less
@@ -37,12 +37,23 @@
                 
             .info-set{
                 display: block;
-                max-height: 68px;
                 background-color: @overlay_bg_white;
                 font-size: @font_l;
                 color: @header_title;
                 text-align: center;
                 margin: 0 0 24px 0;
+
+                    .award-section {
+                        color: rgba(232, 2, 2, .8); 
+                        margin: 6px 0 0 0;
+                    }
+
+                    p {
+                        -webkit-margin-before: 0px;
+                        -webkit-margin-after: 0px;
+                        -webkit-margin-start: 0px;
+                        -webkit-margin-end: 0px; 
+                    }
             }
             
             .control-set {
