--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,11 +3,12 @@ html, body{
 }
 .main{
   height: 100%;
+  min-height: calc(100vh);
 }
 .logo{
-  margin: auto;
+  margin: 0 auto;
   width: 60%;
-  padding-top: 175px;
+  padding-top: 160px;
   font-size: 38px;
   background-image: url("../img/sonylogo.png");
   background-position: center;
@@ -16,26 +17,28 @@ html, body{
 .welcomeText{
   color: white;
   text-align: center;
-  margin: 20px;
+  margin: 0px;
 }
 .loginblock{
-  margin: auto;
+  margin: 0 auto;
   padding: 20px;
   text-align: center;
 }
 .logininput{
   color: #999;
-  margin: 15px;
+  margin: 12px 0 12px 0;
   width: 250px;
-  padding: 3px;
+  padding: 6px;
+  border: 0px;
 }
 .blackbutton{
-  margin: 15px;
-  width:250px;
+  margin: 10px 0 10px 0;
+  width: 262px;
   padding: 12px;
   color: white;
   background-color: black;
   border-width: 0px;
+  border-radius: 6px;
 }
 .overlay {
     width:100%;
@@ -45,7 +48,7 @@ html, body{
     opacity:0.5;
 }
 .loginPage{
-  margin: auto;
+  margin: 0 auto;
   width:100%;
   height:100%;
   background:
@@ -60,7 +63,7 @@ html, body{
 }
 .contentPage{
   display: none;
-  margin: auto;
+  margin: 0 auto;
   width:100%;
   height:100%;
   background:
@@ -78,10 +81,12 @@ html, body{
   color: white;
   margin: auto;
   padding-top: 30px;
+  /*
   padding-left: 20px;
   padding-right: 20px;
-  width: 80%;
-  height: 90%;
+  */
+  width: 86%;
+  min-height: 62%;
 }
 .questionTitles{
   font-size: 22px;
@@ -101,14 +106,14 @@ html, body{
 .hinttext-login{
   text-align: center;
   color: red;
-  height: 30px;
+  max-height: 30px;
 }
 
 .ItalicFont{
   font-style:italic;
 }
 .selectionblock{
-  margin: 20px;
+  margin: 20px 0 20px 0;
 }
 .qOptions{
   margin-top: 15px;
@@ -124,19 +129,26 @@ html, body{
 }
 
 .progressBar{
-  position: relative;
-  bottom:25px;
-  color: white;
-  margin:auto;
-  width: 80%;
+    /*
+    position: relative;
+    bottom: 25px;
+    */
+    color: white;
+    margin: 0 auto;
+    width: 80%;
 }
 .progressBarTitle{
-  position:absolute;
-  left: 0px;
+    /*
+    position:absolute;
+    left: 0px;
+    */
 }
 .progressPercentage{
-  position: absolute;
-  right: 0px;
+/*
+    position: absolute;
+    right: 0px;
+    */
+    text-align: end;
 }
 .barbackground{
   background-color: white;
@@ -145,8 +157,10 @@ html, body{
   height:20px;
 }
 .barPercentage{
+    /*
   position:relative;
   left:0px;
+  */
   background-color: black;
   width: 1%;
   margin-top: 5px;
